项目初步提交

--- a/src/html/mia-cart.html
+++ b/src/html/mia-cart.html
@@ -9,6 +9,9 @@
 		<link rel = "stylesheet" type = "text/css" href = "../css/mia-cart.css"/>
 		<!--引入JS JQ代码块-->
 		<script src="../js/jquery-1.12.0.js"></script>
+		<script src="../js/mia-cart.js"></script>
+		<!--这是cookie使用插件-->
+		<script src="../js/mycookie.js"></script>
 		
 		<!--当前页面使用样式-->
 		<style type="text/css">
