--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 				<div class="lenovoWord" style="display: none;">
 					<a href="">睡袋</a>
 					<a href="">丽得姿</a>
-					<a href="" class="">益生菌</a>
+					<a href="">益生菌</a>
 					<a href="">储奶袋</a>
 					<a href="">奶瓶清洗剂</a>
 					<a href="">隔尿垫</a>
@@ -128,16 +128,16 @@
 		<div class="content-recommend">
 			<h1>为你推荐<span>千万妈妈&nbsp;精明之选</span></h1>
 			<div class="recommend-goods clearfix">
-				<a>
+				<a href="http://127.0.0.1:8020/demo-mia/src/html/mia-product.html" target=" _blank">
 				    <div class="goods-img"><img width="219" height="219" src="img/recommend1.jpg" /></div>
 					<div class="goods-intro">
-						<p class="intro">这是商品信息这是商品信息这是商品信息这是商品信息</p>
+						<p class="intro">这是链接详情页</p>
 						<p>
 							<span class="new">¥<em>316.00</em></span>
 							<span class="old">¥<em>499.00</em></span>							
 						</p>
 						<p class="buy">50000人已购买</p>
-						<span class="btn" href="#">立即抢</span>
+						<span class="btn">立即抢</span>
 					</div>
 				</a>
 				<a>
